# ICP_Blockchain_project

./: Cargo.toml  README.md  README_BACKEND.md  deploy.sh  dfx.json  index.html  package-lock.json  package.json
src/: App.tsx
src/certificate_issuer/: Cargo.toml  certificate_issuer.did
src/certificate_issuer/src/: lib.rs
src/components/: CreateCourseModal.tsx  EducatorDashboard.tsx  LearnerDashboard.tsx  LoadingSpinner.tsx  Navigation.tsx
src/contexts/: AuthContext.tsx  DataContext.tsx
src/course_management/: Cargo.toml  course_management.did
src/course_management/src/: lib.rs
src/pages/: CommunityPage.tsx  CourseDetailPage.tsx  CoursesPage.tsx  Dashboard.tsx  LoginPage.tsx  ProfilePage.tsx
src/peer_learning/: Cargo.toml  peer_learning.did
src/peer_learning/src/: lib.rs
src/token_rewards/: Cargo.toml  token_rewards.did
src/token_rewards/src/: lib.rs
src/user_management/: Cargo.toml  user_management.did
src/user_management/src/: lib.rs
